--- a/src/styles/ArticleNavBar.scss
+++ b/src/styles/ArticleNavBar.scss
@@ -2,6 +2,7 @@ $color1: #EEE7E1;
 $color2: white;
 $font-primary: #342432;
 
+@import './base/reset.scss';
 
 .article-nav-container {
   display: flex;
@@ -16,6 +17,7 @@ $font-primary: #342432;
 
   .mode-switch {
     width: 25%;
+    font-size: 35px;
 
     &:hover {
       cursor: pointer;
@@ -26,7 +28,7 @@ $font-primary: #342432;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
+    margin-top: 10px;
     width: 60%;
 
     .article-nav-item {
@@ -40,7 +42,7 @@ $font-primary: #342432;
         top: -20px;
         height: 2px;
         width: 0;
-        background: #000;
+        background: rgb(133, 130, 124);
         transition-duration: 200ms;
         transition-timing-function: ease-out;
       }
