--- a/src/styles/SideNavBar.scss
+++ b/src/styles/SideNavBar.scss
@@ -2,6 +2,8 @@ $color1: #EEE7E1;
 $color2: white;
 $font-primary: #342432;
 
+@import './base/reset.scss';
+
 .side-nav-container {
   display: flex;
   flex-direction: column;
@@ -11,6 +13,7 @@ $font-primary: #342432;
   .logo {
     height: 100px;
     width: 100px;
+    filter: none !important;
   }
 
   .nav-connection-list {
